--- a/CSS/fsj.css
+++ b/CSS/fsj.css
@@ -8,17 +8,16 @@ body {
 }
 
 header {
-    background-image: url("./IMG/fsj-snow.jpg");
-    background-size: cover;
     color: #ffd254;
     width: 100%;
-    height: 200px;
+    height: 100px;
     border: 1px solid #2c36dd;
     font-size: 30px;
     text-shadow: 0px 0px 10px #2c36dd;
 }
 
 h1 {
+    margin-top: 10px;
     viewport-fit: 3%;
 }
 
