--- a/CSS/fsj.css
+++ b/CSS/fsj.css
@@ -11,13 +11,14 @@ header {
     color: #ffd254;
     width: 100%;
     height: 100px;
+    margin: 10px 20px;
     border: 1px solid #2c36dd;
     font-size: 30px;
     text-shadow: 0px 0px 10px #2c36dd;
 }
 
 h1 {
-    margin-top: 10px;
+    margin: 0px;
     viewport-fit: 3%;
 }
 
